--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ repositories {
 dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.20.0'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.20.0'
 }
 
 testing {
