Working Log4j,H2,GDriveFetch and Auth

--- a/test.properties
+++ b/test.properties
@@ -1,1 +1,4 @@
 banner=Welcome to fortnight
+application.name=FictionalFortnight
+gdrive.credentials.location=C:\\Users\\yhinge\\Documents
+gdrive.credentials.filename=client_secret_gdrive_nappier.json
