--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.20.0'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.20.0'
+	implementation group:'com.h2database', name:'h2', version:'1.4.198'
+	implementation group: 'org.hibernate', name: 'hibernate-core', version: '6.2.0.Final'
+	implementation group: 'org.hibernate.common', name: 'hibernate-commons-annotations', version: '6.0.6.Final'
+    implementation 'com.google.api-client:google-api-client:2.0.0'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+    implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
 }
 
 testing {
@@ -38,7 +44,7 @@ testing {
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(8)
+        languageVersion = JavaLanguageVersion.of(11)
     }
 }
 
